--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 #load{
-	width:100%;
-	background-color:#ccc;
+	background-color:#96CDCD;
 	font-size: 2em;
+	text-align: center;
+	padding:10px;
 }
 tr{
 	border-bottom: 1px solid black;
 }
 td{
 	padding:10px;
+}
+.btn{
+	width:100%;
+}
+table{
+	margin-left: auto;
+	margin-right: auto;
 }
