--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
 	background-color:#96CDCD;
 }
 #load{
+	margin-top: 10px;
 	font-size: 2em;
 	text-align: center;
 	padding:10px;
@@ -18,4 +19,8 @@ td{
 table{
 	margin-left: auto;
 	margin-right: auto;
+}
+.center{
+	margin: 0 auto;
+	text-align: center;
 }
